# projectmanager-sdk-python

./: .pyre_configuration  LICENSE  README.md  pyproject.toml  requirements.txt  sdk-config.json  setup.cfg
.github/workflows/: publish.yml  update.yml
C:\github\projectmanager-sdk-python/: pyproject.toml
C:\github\projectmanager-sdk-python/src/ProjectManagerSdk/: __init__.py  projectmanagerclient.py
src/ProjectManager.SDK/: __init__.py  project_manager_client.py  projectmanagerclient.py  test.py
src/ProjectManager.SDK/clients/: apikey_client.py  apikeyclient.py  changeset_client.py  changesetclient.py  dashboard_client.py  dashboardclient.py  discussion_client.py  discussionclient.py  file_client.py  fileclient.py  homefile_client.py  homefileclient.py  integration_client.py  integrationcategory_client.py  integrationcategoryclient.py  integrationclient.py  integrationprovider_client.py  integrationproviderclient.py  jira_client.py  jiraclient.py  license_client.py  licenseclient.py  me_client.py  meclient.py  project_client.py  projectchargecode_client.py  projectchargecodeclient.py  projectclient.py  projectcustomer_client.py  (+41 more)
src/ProjectManagerSdk/: __init__.py  projectmanagerclient.py  tools.py
swagger/: swagger-117.0.4438.json  swagger-120.0.4689.json  swagger-121.0.4887.json  swagger-121.0.4903.json  swagger-121.0.4923.json  swagger-122.0.214.json  swagger-122.0.216.json  swagger-123.0.222.json  swagger-125.2.176.json  swagger-126.0.205.json  swagger-127.0.185.json  swagger-128.0.112.json  swagger-129.0.113.json  swagger-130.1.162.json  swagger-131.1.208.json  swagger-132.1.183.json  swagger-133.1.136.json  swagger-134.0.125.json  swagger-135.0.134.json  swagger-136.0.106.json  swagger-137.0.201.json  swagger-138.1.170.json  swagger-139.0.157.json  swagger-141.1.156.json  swagger-142.0.226.json  swagger-143.0.162.json  swagger-144.0.155.json  swagger-145.0.219.json  swagger-146.1.229.json  swagger-148.0.136.json  swagger-149.0.187.json  swagger-150.1.171.json  swagger-151.0.100.json  swagger-152.0.138.json  swagger-153.2.193.json  swagger-154.0.181.json
test/: __init__.py  test_basic.py  test_dacite_parsing.py
tests/: test.py
(+486 files in other folders)
