[metadata]
name = ProjectManager.SDK
version = 11.1.2012
author = ProjectManager.com
author_email = 
description = Software development kit for the ProjectManager.com API. for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/projectmgr/projectmanager-sdk-python
project_urls =
    Bug Tracker = https://github.com/projectmgr/projectmanager-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    requests

[options.packages.find]
where = src